--- a/.github/workflows/update_excel.yml
+++ b/.github/workflows/update_excel.yml
@@ -2,7 +2,7 @@ name: Live JSON to Excel
 
 on:
   schedule:
-    - cron: "*/10 * * * *" # every 10 minutes
+    - cron: "0 0 * * *" # every day 
   workflow_dispatch: # allow manual run
 
 jobs:
